# text2sql-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  langgraph.json  pyproject.toml
.github/scripts/: langgraph_api.py  list_deployments.py  report_deployment.py  report_eval.py  test_langgraph_api.py
.github/workflows/: DEPLOYMENT_PIPELINE.md  README.md  new-lgp-deployment.yml  new-lgp-revision.yml  preview-deployment.yml  quality-checks.yml  security-dependencies.yml  test-coverage.yml  test-simple.yml  test-with-results.yml  test.yml
agents/: prompts.py  simple_text2sql.py  utils.py
dockerfiles/: .dockerignore  Dockerfile
examples/: chinook_methods.py  langgraph_client.py
helpers/: create_datasets.py
tests/e2e/: test_agent_invocation.py
tests/integrations/: test_full_graph.py
tests/offline_evals/: __init__.py  test_e2e_agent.py  test_sql_generation.py
tests/unit/: test_nodes.py  test_utils.py
